--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
-    "pg": "^7.4.0"
+    "pg": "^7.4.0",
+    "jsonwebtoken": "8.1.0"
   }
 }
