--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "jsonwebtoken": "8.1.0",
     "morgan": "^1.9.0",
-    "pg": "^7.4.0",
-    "jsonwebtoken": "8.1.0"
+    "pg": "^7.4.0"
   }
 }
