--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-bearer-token": "^2.1.1",
     "jsonwebtoken": "8.1.0",
     "morgan": "^1.9.0",
     "pg": "^7.4.0"
