--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-bearer-token": "^2.1.1",
     "jsonwebtoken": "8.1.0",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.4.1",
     "pg": "^7.4.0"
   }
 }
