--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run test-unit",
-    "test-unit": "NODE_ENV=test mocha --require co-mocha 'lib/*.spec.js'"
+    "test-unit": "NODE_ENV=test mocha --require co-mocha 'lib/*.spec.js'",
+    "test-auth": "NODE_ENV=test mocha --require co-mocha 'lib/auth.spec.js'"
   },
   "keywords": [],
   "author": "",
