--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "8.1.0",
     "morgan": "^1.9.0",
     "nodemailer": "^4.4.1",
-    "pg": "^7.4.0"
+    "pg": "^7.4.0",
+    "randomstring": "^1.1.5"
   },
   "devDependencies": {
     "chai": "3.5.0",
