--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "brcypt": "^1.0.1",
     "express": "^4.16.2",
     "express-bearer-token": "^2.1.1",
     "jsonwebtoken": "8.1.0",
