--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "morgan": "^1.9.0",
     "nodemailer": "^4.4.1",
     "pg": "^7.4.0",
-    "randomstring": "^1.1.5"
+    "randomstring": "^1.1.5",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "chai": "3.5.0",
     "co-mocha": "1.1.2",
     "mocha": "2.5.3",
     "sinon": "1.17.4",
-    "sinon-chai": "2.8.0"
+    "sinon-chai": "2.8.0",
+    "uuid": "3.3.2"
   }
 }
