--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^5.1.0",
     "bcrypt": "^3.0.5",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
@@ -32,7 +33,6 @@
     "mocha": "^2.5.3",
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
-    "supertest": "^4.0.2",
-    "uuid": "3.3.2"
+    "supertest": "^4.0.2"
   }
 }
